# tapipy-tapisservice

./: CHANGELOG.md  Dockerfile-fastapi  Dockerfile-flask  Dockerfile-tests  Makefile  README.md  flake.nix  flask_service_entry.sh  pyproject.toml  requirements-fastapi.txt  requirements-flask.txt  requirements-test.txt
.devcontainer/: devcontainer.json
tapisservice/: __init__.py  auth.py  config.py  configschema.json  errors.py  logs.py  tenants.py
tapisservice/tapisdjango/: __init__.py
tapisservice/tapisfastapi/: __init__.py  auth.py  utils.py
tapisservice/tapisflask/: __init__.py  auth.py  resources.py  utils.py
tests/: tapisservice-tests.py
