[tool.poetry]
name = "tapisservice"
version = "1.1.3"
description = "Python lib for interacting with an instance of the Tapis API Framework's tapisservice plugin."
license = "BSD-4-Clause"
authors = ["Joe Stubbs <jstubbs@tacc.utexas.edu>"]
maintainers = ["Joe Stubbs <jstubbs@tacc.utexas.edu>",
			   "Christian Garcia <cgarcia@tacc.utexas.edu>"]
readme = "README.md"
repository = "https://github.com/tapis-project/tapipy-tapisservice"
include = ["tapisservice/tapisflask",
           "tapisservice/tapisfastapi",
		   "tapisservice/tapisdjango"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
pycrypto = "2.6.1"
PyYAML = "*"
jsonschema  = "*"
flask-cors = "*"
openapi-core = "0.12.0"
pyjwt = "*"
cryptography = "*"
tapipy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
