[tool.poetry]
name = "tapisservice"
version = "1.6.0"
description = "Python lib for interacting with an instance of the Tapis API Framework's tapisservice plugin."
license = "BSD-4-Clause"
authors = ["Joe Stubbs <jstubbs@tacc.utexas.edu>"]
maintainers = ["Joe Stubbs <jstubbs@tacc.utexas.edu>",
			   "Christian Garcia <cgarcia@tacc.utexas.edu>"]
readme = "README.md"
repository = "https://github.com/tapis-project/tapipy-tapisservice"
include = ["tapisservice/tapisflask",
           "tapisservice/tapisfastapi",
		   "tapisservice/tapisdjango"]

[tool.poetry.dependencies]
python = "^3.6"
# Tapipy has the rest of the dependencies
tapipy = ">=  1.6.0"
# Continued support for pycrypto(dead 2013). import Crypto
pycryptodome = ">= 3.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
